2006-05-30  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-parse.c: protect against broken XMP blocks
	using rdf:Alt instead of rdf:Seq.  Fixes bug #343315.

	* plug-ins/metadata/xmpdump.c (main): call g_set_prgname() to get
	better messages from glib.

	* data/images/gimp-splash.png: new splash screen, waiting for the
	old animation feature to be restored.

2006-05-30  Michael Natterer  <mitch@gimp.org>

	Honor active components when pasting. Fixes bug #150845:

	* app/core/gimplayer-floating-sel.c (floating_sel_composite):
	don't temporarily set all image components to active while
	compositing.

	* app/core/gimpimage.c (gimp_image_set_component_active):
	relax()/rigor() the floating selection around setting the "active"
	flag. Also make sure the projection is updated correctly.

2006-05-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdataeditor.c (gimp_data_editor_name_activate)
	* app/widgets/gimpdatafactoryview.c
	(gimp_data_factory_view_tree_name_edited): strip the newly
	entered name from whitespace and reject empty names.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* app/batch.c (batch_run): GIMP_BATCH_INTERPRETER can be set in
	the environment to override the default batch interpreter procedure.

	* plug-ins/pygimp/plug-ins/happy-valley-relief.py: basic python
	code evaluator function.

	* plug-ins/pygimp/plug-ins/Makefile.am: add above file.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Other code places should allow
	menu paths to be None too.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Allow menu paths to be None.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* app/file/gimprecentlist.c: #define _GNU_SOURCE instead of
	_SVID_SOURCE, so we get all the declarations we need. Fixes
	bug #342390.

2006-05-29  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpchainbutton.c
	* libgimpwidgets/gimppixmap.c: #include "config.h"

2006-05-29  Manish Singh  <yosh@gimp.org>
